<?xml version="1.0" encoding="utf-8"?>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>
