<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/huevos_rellenos"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:onClick="IrEntradas"
                android:text="@string/entradas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/salmon"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:onClick="IrFuertes"
                android:text="@string/fuertes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/limonada_frambuesa"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:onClick="IrBebidas"
                android:text="@string/bebidas" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/cheesecake"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_purple"
                android:onClick="IrPostres"
                android:text="@string/postres" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>